--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,11 +9,7 @@
   </head>
 
   <body>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
-    <%if user_signed_in?%>
-      <a href="/users/sign_out" data-method="delete"><span class="glyphicon glyphicon-log-in"></span> Log out</a>   
-    <%end%>
+    <%= render 'layouts/header'%>
     <%= yield %>
   </body>
 </html>
